Fixed: Fixed light and dark mode.

--- a/src/main/resources/html/style.css
+++ b/src/main/resources/html/style.css
@@ -1,14 +1,4 @@
 body {
-  background-color: #222;
-  color: #eee;
-  font-size:1.2em;
-  display: table;
-  height: 100%;
-  position: relative;
-  width: 100%;
-  background-size: cover;
-}
-.light {
   background-color: #fffaea;
   color: #000;
   font-size:1.2em;
@@ -18,7 +8,20 @@ body {
   width: 100%;
   background-size: cover;
 }
-.light p{
+.dark {
+  background-color: #222;
+  color: #eee;
+  font-size:1.2em;
+  display: table;
+  height: 100%;
+  position: relative;
+  width: 100%;
+  background-size: cover;
+}
+.dark p{
+  color: white;
+}
+p {
   color: black;
 }
 
@@ -110,9 +113,6 @@ h2{
   90% {
     transform: translate3d(0, -4px, 0);
   }
-}
-p {
-  color: white;
 }
 .change {
     cursor: pointer;
